# semvercheck

./: Cargo.toml  README.md
src/: semvercheck.rs
